--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -160,16 +160,16 @@
 
       <div class="rx-info-content-container">
 
-        <!--new-->
         <v-volume-annotations :manifest-count="{{ user_annotation_count }}" :page-count="{{ user_annotation_page_count }}"></v-volume-annotations>
+        <!--
         {% if user_annotation_count > 0 %}
         <ul class="uk-subnav uk-subnav-pill" uk-switcher>
           <li><a href="#" id="rx-annotation-manifest">{{ user_annotation_count }} annotations in manifest</a></li>
           <li><a href="#" id="rx-annotation-page"> annotations on page</a></li>
         </ul>
-        <!-- The my annotations elements will need to be cleaned up when the annotation model changes are fully finished. -->
         {% endif %}
-        <!--new-->
+        -->
+
 
         <div class="rx-info-content">
           <div class="rx-info-content-label">Authors</div>
@@ -266,19 +266,11 @@
           url="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/all">
         </v-info-content-url-single>
 
-         {% if "/page/all" in request.get_full_path in request.get_full_path %}
-          <!-- <v-info-content-url-external
-            ref="rx-url-canvas" v-show="false">
-          </v-info-content-url-external> -->
-
-          <v-info-content-url-external ref="rx-url-stable-page" v-show="false">
+        {% if "/page/all" in request.get_full_path in request.get_full_path %}
+          <v-info-content-url-external label="Stable Page" url="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/all">
           </v-info-content-url-external>
         {% else %}
-          <!-- <v-info-content-url-external
-            ref="rx-url-canvas">
-          </v-info-content-url-external> -->
-
-          <v-info-content-url-external ref="rx-url-stable-page">
+          <v-info-content-url-external label="Stable Page" url="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ page.pid }}">
           </v-info-content-url-external>
         {% endif %}
       </div>
