--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -229,15 +229,13 @@
             target="_blank">Export Citation in RIS</a>
         </div>
 
-        {% if user_annotation_count > 0 %}
-        <div class="rx-info-content">
+        <v-volume-export-annotation-btn :manifest-count="{{ user_annotation_count }}">
           <form action="{% url 'export' volume.pid %}" class="button_to" method="GET" id="rx-annotation-export-form">
             <a class="rx-action-btn" href="#" onclick="rxFormSubmit('rx-annotation-export-form');">Export
               Annotations</a>
             {% csrf_token %}
           </form>
-        </div>
-        {% endif %}
+        </v-volume-export-annotation-btn>
 
         <div class="rx-info-content">
           <a class="rx-action-btn" href="https://voyant-tools.org/?corpus={{volume.pid}}&archive=https://{{ request.META.HTTP_HOST }}{% url 'PlainExport' 'v2' volume.pid %}"
