switch v-if to v-show so that the vue instance is always there once rendered

--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -65,7 +65,7 @@
     </div>
   </nav>
 
-  <div class="rx-info-container" v-if="showMoreInfo">
+  <div class="rx-info-container" v-show="showMoreInfo">
 
     <div class="rx-info">
       <a type="button" @click="toggleMoreInfo" class="rx-page-info-btn"
