--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -1,4 +1,4 @@
-{% load static i18n %}<!DOCTYPE html>
+{% load static file_exists_check i18n %}<!DOCTYPE html>
 {% load menu_tags %}
 <html lang="en">
   <head>
@@ -61,6 +61,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.20/css/uikit.min.css" />
     <link href="{% static 'css/selectize.css' %}" rel="stylesheet">
     <link href="{% static 'css/project.css' %}" rel="stylesheet">
+    {% if "css/custom.css"|static_file_exists %}
+      <link href="{% static 'css/custom.css' %}" rel="stylesheet">
+    {% endif %}
 
 
     {% endblock %}
@@ -71,12 +74,12 @@
   <body>
     {% if request.get_host == "readux2.ecdsdev.org" %}
     <div style="background-color:red;width:100%;height:1.5em;color:white;text-align:center;font-size:1.8em;">
-    This website is in BETA! Go to the fully functioning 
+    This website is in BETA! Go to the fully functioning
     <a href="https://readux.ecds.emory.edu/" style="color:lightblue;text-decoration:underline;">Readux</a>.
     </div>
     {% elif request.get_host == "readux.ecdsdev.org" %}
     <div style="background-color:sandybrown;width:100%;height:1.5em;color:darkslategrey;text-align:center;font-size:1.4em;">
-    DEVELOPMENT SITE: Go to <a href="https://readux2.ecdsdev.org" style="color:red;text-decoration:underline;">Beta</a> for beta-testing or go to fully functioning 
+    DEVELOPMENT SITE: Go to <a href="https://readux2.ecdsdev.org" style="color:red;text-decoration:underline;">Beta</a> for beta-testing or go to fully functioning
     <a href="https://readux.ecds.emory.edu/" style="color:darkblue;text-decoration:underline;">Readux</a>.
     </div>
     {% endif %}
@@ -128,7 +131,7 @@
           </ul>
         </div>
       </nav>
-    
+
       {% if messages %}
           {% for message in messages %}
             <div class="uk-alert-{{ message.tags }}" uk-alert>
