Add custom CSS and Google Analytics

--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -1,4 +1,4 @@
-{% load static file_exists_check i18n %}<!DOCTYPE html>
+{% load static i18n %}<!DOCTYPE html>
 {% load menu_tags %}
 <html lang="en">
   <head>
@@ -61,17 +61,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.20/css/uikit.min.css" />
     <link href="{% static 'css/selectize.css' %}" rel="stylesheet">
     <link href="{% static 'css/project.css' %}" rel="stylesheet">
-    {% if "css/custom.css"|static_file_exists %}
-      <link href="{% static 'css/custom.css' %}" rel="stylesheet">
-    {% endif %}
-
-
+    <style>
+      /* {{ css }} */
+    </style>
     {% endblock %}
     {% block extra_css %}{% endblock extra_css %}
 
   </head>
 
   <body>
+    <a class="sr-only" href="#main">Jump to main content</a>
     {% if request.get_host == "readux2.ecdsdev.org" %}
     <div style="background-color:red;width:100%;height:1.5em;color:white;text-align:center;font-size:1.8em;">
     This website is in BETA! Go to the fully functioning
@@ -98,33 +97,35 @@
         <div class="uk-navbar-right">
           <ul class="uk-navbar-nav">
               <li>
-                 <a href="/search/" aria-label="full site search" title="Site Search"><span class="uk-icon uk-icon-button" aria-hidden="true" uk-icon="icon: search" uk-tooltip="title: Site Search; pos: right"></span></a>
+                 <a href="/search/" aria-label="full site search" title="Site Search" uk-tooltip="title: Site Search; pos: right">
+                  <span class="uk-icon uk-icon-button" aria-hidden="true" uk-icon="icon: search"></span>
+                </a>
               </li>
               {% if request.user.is_authenticated %}
               <li>
                 {# URL provided by django-allauth/account/urls.py #}
-                 <a class="{% if url_name == 'index' %}uk-active{% endif %}" aria-label="link to the django admin" title="Access Django Admin Site" href="/admin/">
-                  <span class="uk-user uk-icon-button" aria-hidden="true" uk-icon="icon: cog" uk-tooltip="title: Django admin; pos: right"></span>
+                 <a class="{% if url_name == 'index' %}uk-active{% endif %}" uk-tooltip="title: Django admin; pos: right" aria-label="link to the django admin" title="Access Django Admin Site" href="/admin/">
+                  <span class="uk-user uk-icon-button" aria-hidden="true" uk-icon="icon: cog"></span>
                 </a>
               </li>
               <li>
                 {# URL provided by django-allauth/account/urls.py #}
-                 <a class="{% if url_name == 'index' %}uk-active{% endif %}" aria-label="link to your account page" title="Your Account Details" href="{% url 'users:update'  %}">
-                  <span class="uk-icon uk-icon-button" aria-hidden="true" uk-icon="icon: user" uk-tooltip="title: Your account; pos: right"></span>
+                 <a class="{% if url_name == 'index' %}uk-active{% endif %}" uk-tooltip="title: Your account; pos: right" aria-label="link to your account page" title="Your Account Details" href="{% url 'users:update'  %}">
+                  <span class="uk-icon uk-icon-button" aria-hidden="true" uk-icon="icon: user"></span>
                 </a>
               </li>
               <li>
                 {# URL provided by django-allauth/account/urls.py #}
-                 <a class="{% if url_name == 'index' %}uk-active{% endif %} uk-padding-remove-right" aria-label="signout" title="Signout" href="{% url 'account_logout' %}">
-                  <span class="uk-icon uk-icon-button" aria-hidden="true" uk-icon="icon: sign-out" uk-tooltip="title: Logout; pos: right"></span>
+                 <a class="{% if url_name == 'index' %}uk-active{% endif %} uk-padding-remove-right" uk-tooltip="title: Logout; pos: right" aria-label="signout" title="Signout" href="{% url 'account_logout' %}">
+                  <span class="uk-icon uk-icon-button" aria-hidden="true" uk-icon="icon: sign-out"></span>
                 </a>
               </li>
               {% else %}
               <li>
                 {# URL provided by django-allauth/account/urls.py #}
                 <!-- <a href="{% url 'account_login' %}"> -->
-                 <a href="#signin-modal" aria-label="Sign in" title="Sign in" uk-toggle>
-                  <span class="uk-icon  uk-icon-button uk-margin-small-right" aria-hidden="true" uk-icon="icon: sign-in" uk-tooltip="title: Sign in; pos: right"></span>
+                 <a href="#signin-modal" aria-label="Sign in" title="Sign in" uk-tooltip="title: Sign in; pos: right" uk-toggle>
+                  <span class="uk-icon  uk-icon-button uk-margin-small-right" aria-hidden="true" uk-icon="icon: sign-in"></span>
                 </a>
               </li>
               {% endif %}
@@ -179,6 +180,16 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.20/js/uikit.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.20/js/uikit-icons.min.js"></script>
       <script src="https://kit.fontawesome.com/2ebfe61a88.js" crossorigin="anonymous"></script>
+      {% if has_ga_tracking_id %}
+        <!-- Google Analytics -->
+        <script>
+          window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+          ga("create", "{{ ga_tracking_id }}", "auto");
+          ga("send", "pageview");
+        </script>
+        <script async src='https://www.google-analytics.com/analytics.js'></script>
+        <!-- End Google Analytics -->
+      {% endif %}
     {% endblock javascript %}
     {% block extra_javascript %}{% endblock extra_javascript %}
     {% csrf_token%}
