--- a/apps/templates/cms/collections_page.html
+++ b/apps/templates/cms/collections_page.html
@@ -71,7 +71,7 @@
       <div class=" uk-width-1-4@m">
         <img src="/media/{{collection.thumbnail}}" alt="Banner image for collection {{collection.label}}" />
       </div>
-      <div class="uk-width-3-4@m">
+      <div class="uk-width-3-4@m" tabindex="0">
         <a class="nav-link" href="{% url 'collection' collection.pid %}">
           <h3 class="rx-card-title uk-margin-remove-bottom">{{ collection.label }}</h3>
         </a>
