--- a/apps/templates/snippets/sort_dropdown.html
+++ b/apps/templates/snippets/sort_dropdown.html
@@ -19,8 +19,8 @@
 
 	<div>
 		<a class="rx-icon-btn" onclick="ascaddURL(this)" uk-icon="icon: arrow-up" href=""
-			uk-tooltip="title: sort in ascending order"></a>
+			uk-tooltip="title: sort in ascending order" aria-label="sort in ascending order"></a>
 		<a class="rx-icon-btn" onclick="descaddURL(this)" uk-icon="icon: arrow-down" href=""
-			uk-tooltip="title: sort in descending order"></a>
+			uk-tooltip="title: sort in descending order" aria-label="sort in descending order"></a>
 	</div>
 </div>
