Finish custom CSS. Add instructions for adding Google Analytics

--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -62,7 +62,7 @@
     <link href="{% static 'css/selectize.css' %}" rel="stylesheet">
     <link href="{% static 'css/project.css' %}" rel="stylesheet">
     <style>
-      /* {{ css }} */
+      {{ css }}
     </style>
     {% endblock %}
     {% block extra_css %}{% endblock extra_css %}
